# Assignment1_RT2

./: .gitignore  .gitmodules  README.md
bme_gazebo_sensors/: CMakeLists.txt  package.xml
bme_gazebo_sensors/action/: ExecuteTargetPose.action
bme_gazebo_sensors/config/: goal_bridge.yaml  pose_input.yaml
bme_gazebo_sensors/include/bme_gazebo_sensors/: goal_bridge_component.hpp  motion_executor_component.hpp  visibility_control.h
bme_gazebo_sensors/launch/: full_system.launch.py
bme_gazebo_sensors/rviz/: rviz.rviz
bme_gazebo_sensors/src/: goal_bridge_component.cpp  motion_executor_component.cpp  pose_input_node.cpp
bme_gazebo_sensors/urdf/: mogi_bot.urdf
bme_gazebo_sensors/worlds/: my.sdf
bme_gazebo_sensors_bringup/: CMakeLists.txt  package.xml
bme_gazebo_sensors_bringup/config/: gazebo_websocket.gzlaunch  gazebo_websocket.ign  goal_bridge.yaml  gz_bridge.yaml  motion_executor.yaml
bme_gazebo_sensors_bringup/launch/: full_system.launch.py  full_system_split.launch.py  simulation.launch.py  spawn_robot.launch.py  world.launch.py
bme_gazebo_sensors_interfaces/: CMakeLists.txt  package.xml
bme_gazebo_sensors_interfaces/msg/: MotionUiStatus.msg
launch/: simulation.launch.py
src/: goal_bridge_component.cpp
web_ui/: .env.example  .gitignore  package-lock.json  package.json
web_ui/src/: App.tsx  index.css
web_ui/src/components/: PanelCard.tsx  SimulationPane.tsx  StatusBadge.tsx
web_ui/src/lib/: ros.ts
web_ui/src/types/: ros.ts
