<?xml version="1.0"?>
<package format="3">
  <name>bme_gazebo_sensors</name>
  <version>0.0.0</version>
  <description>Runtime nodes and components for target-pose robot motion in simulation.</description>
  <maintainer email="charbel.elbeaini@lau.edu">Cb-dotcom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>bme_gazebo_sensors_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
    <gazebo_ros gazebo_media_path="${prefix}/share/${PROJECT_NAME}"/>
  </export>
</package>